--- a/src/components/Quiz.css
+++ b/src/components/Quiz.css
@@ -1,3 +1,29 @@
+.quiz-wrapper-outer {
+  margin: 20px auto;
+  padding: 5px var(--general-padding);
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 25px;
+}
+
+.quiz-wrapper {
+  background-color: #ebebeb;
+  border: 1px solid rgb(105, 105, 105);
+  margin: 0;
+  padding: 5px var(--general-padding) 15px var(--general-padding);
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 10px;
+  box-shadow: var(--box-shadow);
+  -webkit-box-shadow: var(--box-shadow);
+  width: var(--main-width-desktop);
+}
+
 .header-wrapper,
 .question-options {
   display: flex;
@@ -47,4 +73,38 @@ button {
 button:hover:enabled {
   background-color: #0056b3;
   color: white;
+}
+
+/*https://stackoverflow.com/questions/6370690/media-queries-how-to-target-desktop-tablet-and-mobile*/
+@media (min-width: 320px) {
+  /* smartphones, iPhone, portrait 480x320 phones */
+  .quiz-wrapper-outer {
+    width: 80%;
+  }
+
+  .quiz-wrapper {
+    width: var(--main-width-mobile);
+  }
+}
+
+@media (min-width: 641px) {
+  /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
+  .quiz-wrapper-outer {
+    width: 80%;
+  }
+
+  .quiz-wrapper {
+    width: var(--main-width-desktop);
+  }
+}
+
+@media (min-width: 961px) {
+  /* tablet, landscape iPad, lo-res laptops ands desktops */
+  .quiz-wrapper-outer {
+    width: 70%;
+  }
+
+  .quiz-wrapper {
+    width: var(--main-width-desktop);
+  }
 }
