--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
   --box-shadow: 8px 8px 0px 0px rgba(0, 0, 0, 1);
   --main-width-mobile: 90%;
   --main-width-desktop: 70%;
+  background-image: url("./src/assets/quiz-back-ground-image.jpg");
 }
 
 code {
