--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,55 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+/* Add these styles to your CSS file */
+label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.correct {
+  border: 2px solid #4FB477;
+  margin-bottom: 10px;
+  padding: 10px;
+  font-family: 'Raleway', sans-serif;
+}
+
+.incorrect {
+  border: 2px solid #E9190F;
+  margin-bottom: 10px;
+  padding: 10px;
+  font-family: 'Raleway', sans-serif;
+}
+.defaultbtn {
+  background-color: #D3C4BE;
+  margin-bottom: 10px;
+  padding: 10px;
+  font-family: 'Raleway', sans-serif;
+  cursor: pointer;
+}
+.header-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.progress-bar {
+  height: 10px;
+  background-color: #ddd;
+  border-radius: 5px;
+  margin-left: 60px;
+  width: 200%;
+  flex-grow: 1;
+}
+
+.progress-bar-fill {
+  height: 100%;
+  border-radius: 5px;
+  background-color: #4caf50; /* Green color for the filled part of the progress bar */
+}
+@media screen and (max-width: 600px) {
+  .progress-bar {
+    margin-left: 60px;
+   
+  }
+}
+
